<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cs2340.edu.gatech.shoppingwithfriends.postItem">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/postItem"
        android:id="@+id/textView11"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="40dp"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/postItemHint"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textStyle="italic"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/itemName"
        android:id="@+id/textView13"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemNameText"
        android:layout_below="@+id/textView12"
        android:layout_toEndOf="@+id/textView13" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/maxPrice"
        android:id="@+id/textView14"
        android:layout_below="@+id/itemNameText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/maxPriceText"
        android:layout_below="@+id/itemNameText"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView14"
        android:text="@string/maxPriceText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notes"
        android:id="@+id/textView15"
        android:layout_below="@+id/maxPriceText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/itemNotesText"
        android:layout_alignTop="@+id/textView15"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView15"
        android:text="@string/itemNotes" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/button9"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="cancel"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="POST TO ITEMS"
        android:id="@+id/button11"
        android:layout_above="@+id/button9"
        android:layout_alignParentStart="true"
        android:onClick="postItemAction"/>
</RelativeLayout>
