<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cs2340.edu.gatech.shoppingwithfriends.Controller.MainScreen">

    <TextView android:text="@string/welcomeText" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000000" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="logoutRun"
        android:textColor="#000000"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends"
        android:id="@+id/button8"
        android:onClick="friendsScreen"
        android:textColor="#000000"
        android:layout_above="@+id/button5"
        android:layout_alignParentEnd="true" />



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myPostedItems"
        android:id="@+id/button12"
        android:onClick="wishList"
        android:layout_above="@+id/button8"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Deals"
        android:id="@+id/button17"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:onClick="deals"
        android:layout_above="@+id/button12" />

</RelativeLayout>
